NIAD-2138 checkStyle done. waiting for review