@@ -29,7 +29,6 @@ import java.io.PrintWriter;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.fail;
@@ -51,6 +50,8 @@ public class E2EMappingIT {
     private static final String CONVERSATION_ID_PLACEHOLDER = "{{conversationId}}";
     private static final String LOSING_ODS_CODE = "B83002";
     private static final String WINNING_ODS_CODE = "C81007";
+    //these are programming language special characters, not to be confused with line endings
+    private static final String SPECIAL_CHARS = "\\\\n|\\\\t|\\\\b|\\\\r";
 
     private String nhsNumberToBeReplaced;
     private String patientNhsNumber;
@@ -71,28 +72,6 @@ public class E2EMappingIT {
 
     @Autowired
     private FhirParser fhirParserService;
-
-
-    /*
-        //patient id 9446363101 == Generated
-
-        //conversation id 6E242658-3D8E-11E3-A7DC-172BDA00FA67 == Generated
-
-
-        //message id// C258107F-7A3F-4FB5-8B36-D7C0F6496A17
-
-        //losing
-        //ODS Code: B83002
-        //Party Key: RHM-801710
-        //ASID: 715373337545
-
-
-
-        ///winning
-        //ODS Code: C81007     winning
-        //Party Key: RHM-803229
-        //ASID: 276827251543
-     */
 
     @BeforeEach
     public void setUp() {
@@ -124,81 +103,63 @@ public class E2EMappingIT {
             "entry[*].resource.patient.reference"
     );
 
-
     @Test
     public void handlePWTP2EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP2";
-
         executeTest(inputFileName);
     }
 
     @Test
     public void handlePWTP3EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP3";
-
         executeTest(inputFileName);
     }
 
     @Test
     public void handlePWTP4EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP4";
-
         executeTest(inputFileName);
     }
 
     @Test
     public void handlePWTP5EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP5";
-
         executeTest(inputFileName);
     }
 
     @Test
     public void handlePWTP6EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP6";
-
         executeTest(inputFileName);
     }
 
     @Test
-    public void handlePWTP7_visEhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
+    public void handlePWTP7visEhrExtractFromQueue() throws JSONException, JAXBException {
         String inputFileName = "PWTP7_vis";
-
         executeTest(inputFileName);
     }
 
     @Test
     public void handlePWTP9EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP9";
-
         executeTest(inputFileName);
     }
 
     @Test
     public void handlePWTP10EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP10";
-
         executeTest(inputFileName);
     }
 
     @Test
     public void handlePWTP11EhrExtractFromQueue() throws JSONException, JAXBException {
-        // process starts with consuming a message from MHS queue
         String inputFileName = "PWTP11";
-
         executeTest(inputFileName);
     }
 
     private void executeTest(String inputFileName) throws JAXBException, JSONException {
-        sendInboundMessageToQueue("/e2e-mapping/input-xml/" + inputFileName + ".xml"); //send inbound message to the queue
+        // process starts with consuming a message from MHS queue
+        sendInboundMessageToQueue("/e2e-mapping/input-xml/" + inputFileName + ".xml");
 
         // wait until EHR extract is translated to bundle resource and saved to the DB
         await().until(this::isEhrExtractTranslated);
@@ -208,20 +169,28 @@ public class E2EMappingIT {
     }
 
     private void sendInboundMessageToQueue(String payloadPartPath) throws JAXBException {
-        var inboundMessage = createInboundMessage(payloadPartPath);//create inbound message
-        mhsJmsTemplate.send(session -> session.createTextMessage(parseMessageToString(inboundMessage))); //inbound message and convert to string
+        var inboundMessage = createInboundMessage(payloadPartPath);
+        mhsJmsTemplate.send(session -> session.createTextMessage(parseMessageToString(inboundMessage)));
     }
 
     private InboundMessage createInboundMessage(String payloadPartPath) throws JAXBException {
 
         var inboundMessage = new InboundMessage();
 
-        var payload = readResourceAsString(payloadPartPath); //read payload part
-        var ebXml = readResourceAsString(EBXML_PART_PATH).replace(CONVERSATION_ID_PLACEHOLDER, conversationId);//read ebxml part
+        var payload = readResourceAsString(payloadPartPath);
+        var ebXml = readResourceAsString(EBXML_PART_PATH).replace(CONVERSATION_ID_PLACEHOLDER, conversationId);
 
         RCMRIN030000UK06Message payloadObject = unmarshallString(payload, RCMRIN030000UK06Message.class);
 
-        nhsNumberToBeReplaced = payloadObject
+        nhsNumberToBeReplaced = getNhsNumberToBeReplaced(payloadObject);
+
+        inboundMessage.setPayload(payload.replaceAll(nhsNumberToBeReplaced, patientNhsNumber));
+        inboundMessage.setEbXML(ebXml);
+        return inboundMessage;
+    }
+
+    private String getNhsNumberToBeReplaced(RCMRIN030000UK06Message payloadObject) {
+        return payloadObject
                 .getControlActEvent()
                 .getSubject()
                 .getEhrExtract()
@@ -229,11 +198,6 @@ public class E2EMappingIT {
                 .getPatient()
                 .getId()
                 .getRoot();
-
-        payload.replaceAll(nhsNumberToBeReplaced, patientNhsNumber);
-        inboundMessage.setPayload(payload);
-        inboundMessage.setEbXML(ebXml);
-        return inboundMessage;
     }
 
     @SneakyThrows
@@ -242,17 +206,14 @@ public class E2EMappingIT {
     }
 
     private boolean isEhrExtractTranslated() {
-        var migrationStatusLog = migrationStatusLogService.getLatestMigrationStatusLog(conversationId); //keep quering the database
-        return EHR_EXTRACT_TRANSLATED.equals(migrationStatusLog.getMigrationStatus()); //
+        var migrationStatusLog = migrationStatusLogService.getLatestMigrationStatusLog(conversationId);
+        return EHR_EXTRACT_TRANSLATED.equals(migrationStatusLog.getMigrationStatus());
     }
 
     private void verifyBundle(String path) throws JSONException {
         var patientMigrationRequest = patientMigrationRequestDao.getMigrationRequest(conversationId);
         var expectedBundle = readResourceAsString(path).replaceAll(nhsNumberToBeReplaced, patientNhsNumber);
-        var specialChars = "\\\\n|\\\\t|\\\\b|\\\\r";//these are programming language special characters, not to be confused with line endings
         var odsCodeToBeReplaced = getOdsToBeReplaced(expectedBundle);
-
-        expectedBundle = expectedBundle.replaceAll(odsCodeToBeReplaced, LOSING_ODS_CODE);
 
         if (OVERWRITE_EXPECTED_JSON) {
             overwriteExpectJson(patientMigrationRequest.getBundleResource());
@@ -261,20 +222,22 @@ public class E2EMappingIT {
         var bundle = fhirParserService.parseResource(patientMigrationRequest.getBundleResource(), Bundle.class);
         var combinedList = Stream.of(generateJsonPathIgnores(bundle), STATIC_IGNORED_JSON_PATHS)
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
+
+        expectedBundle = expectedBundle.replaceAll(odsCodeToBeReplaced, LOSING_ODS_CODE);
 
         assertBundleContent(
-                patientMigrationRequest.getBundleResource().replaceAll(specialChars, ""),
-                expectedBundle.replaceAll(specialChars, ""), combinedList
+                patientMigrationRequest.getBundleResource().replaceAll(SPECIAL_CHARS, ""),
+                expectedBundle.replaceAll(SPECIAL_CHARS, ""),
+                combinedList
         );
     }
 
     private String getOdsToBeReplaced(String expectedBundle) {
         var startIndex = expectedBundle.toLowerCase().indexOf("https://PSSAdaptor/".toLowerCase()) + "https://PSSAdaptor/".length();
         var endIndex = expectedBundle.toLowerCase().indexOf("\"", startIndex);
-        var odsCodeToBeReplaced = expectedBundle.substring(startIndex, endIndex);
 
-        return odsCodeToBeReplaced;
+        return expectedBundle.substring(startIndex, endIndex);
     }
 
     @SneakyThrows
@@ -295,5 +258,3 @@ public class E2EMappingIT {
                 new CustomComparator(JSONCompareMode.STRICT, customizations));
     }
 }
-
-//Pharmacy Message: This is the 22047 issue after switch to generic
